--- a/main.css
+++ b/main.css
@@ -5,23 +5,26 @@ body{
 }
 img {
     width: 100%;
-    height: 200px;
-    display: block;
-    margin: 0px;  
+    height: 100%;
+    margin: 0px;     
 }
 .meniu {
     list-style: none;
-    display: inline-flex;
-    margin: 5px;
-}
-.meniu1{
-    float: right;
+    display: inline-block;
+    margin: 8px;
+    font-weight: bold;
+    font-size: 20px;
+    padding: 0px;
 }
 .sidemeniu {
     list-style: none;
-    text-align: center;
-    text-transform: 10px;
     font-weight: bold;
+    padding: 0px;
+    background-color: rgba(29, 185, 172, 0.623);
+    display: block;
+    text-align: center;
+
+
 
 }
 a {
@@ -30,34 +33,43 @@ a {
     color: black;
 }
 .grid-container {
-    display: grid;
-    background-color: #2196F3; 
+    display: grid; 
+    background-color: rgba(29, 185, 172, 0.623); 
+    margin: 0px;
+      
 }
-.grid-item {
-  background-color: rgba(29, 185, 172, 0.623);
-  padding: 0px;  
-}
+
 .item1 {
   grid-column: 1 / span 4;
   grid-row: 1;
-  top: 0px;   
+  height: 250px;    
 }
+
 .item2 {
   grid-column: 1 / span 2;
   grid-row: 2;
-  height: 5vh;    
-}
+  background-color: rgba(29, 185, 200, 0.623);
+  
+  }
 .item3 {
   grid-column: 3 / span 2;
   grid-row: 2;
-  
-  height: 20px;
-  width: 20px;
+  background-color: rgba(29, 185, 200, 0.623);
+  }
+.item-a {
+display: flex;
+justify-content: center;
+align-self: center;
+margin-left: 20px;
+height: 30px;
+margin: 10px;
 }
+
 .item4 {
   grid-column: 1 / span 1;
   grid-row: 3;
-  text-decoration: none;      
+
+       
 }
 .item5 {
   grid-column: 2 / span 2;
@@ -70,12 +82,25 @@ a {
 .item7 {
   grid-column: 1 / span 1;
   grid-row: 4 ;
+  font-weight: bold;
+  background-color: rgba(29, 185, 200, 0.623);
+  text-align: center;
+
+
 }
 .item8 {
   grid-column: 2 / span 2;
   grid-row: 4 ;
+  font-weight: bold;
+  background-color: rgba(29, 185, 200, 0.623);
+  text-align: center;
 }
 .item9 {
   grid-column: 4 / span 1;
   grid-row: 4 ;
+  font-weight: bold;
+  
+  background-color: rgba(29, 185, 200, 0.623);
+  text-align: center;
+  margin: 20px;
 }
